hw-14.5_SC_NP/deployment-frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dpl
  namespace: production
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 0dok0/kubernetes-config_frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
         securityContext:
           runAsUser: 1001
           runAsGroup: 3000
           runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: production
spec:
  selector:
    app: frontend
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
